viikon kaksi päivitys

--- a/work/mechlab/mechlab/web/WEB-INF/web.xml
+++ b/work/mechlab/mechlab/web/WEB-INF/web.xml
@@ -1,5 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+    <servlet>
+        <servlet-name>TestiServelet</servlet-name>
+        <servlet-class>TestiServelet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Testi2Servlet</servlet-name>
+        <servlet-class>TestiServlet2</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Connection</servlet-name>
+        <servlet-class>Tietokanta.Yhteys</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Kayttaja</servlet-name>
+        <servlet-class>Mallit.Kayttaja</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>TestiServelet</servlet-name>
+        <url-pattern>/TestiServelet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Testi2Servlet</servlet-name>
+        <url-pattern>/Testi2Servlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Connection</servlet-name>
+        <url-pattern>/Connection</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Kayttaja</servlet-name>
+        <url-pattern>/Kayttaja</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
