--- a/work/mechlab/mechlab/web/WEB-INF/web.xml
+++ b/work/mechlab/mechlab/web/WEB-INF/web.xml
@@ -1,20 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
-    <servlet>
-        <servlet-name>TestiServelet</servlet-name>
-        <servlet-class>TestiServelet</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>Testi2Servlet</servlet-name>
-        <servlet-class>TestiServlet2</servlet-class>
-    </servlet>
+ 
     <servlet>
         <servlet-name>Login</servlet-name>
         <servlet-class>Mechlab.Servlets.Login</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>SelaaMech</servlet-name>
-        <servlet-class>Mechlab.Servlets.SelaaMech</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>MechSelaa</servlet-name>
@@ -52,14 +41,12 @@
         <servlet-name>MechLuoUusi</servlet-name>
         <servlet-class>Mechlab.Servlets.MechLuoUusi</servlet-class>
     </servlet>
-    <servlet-mapping>
-        <servlet-name>TestiServelet</servlet-name>
-        <url-pattern>/TestiServelet</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>Testi2Servlet</servlet-name>
-        <url-pattern>/Testi2Servlet</url-pattern>
-    </servlet-mapping>
+  
+    <servlet>
+        <servlet-name>mechsimuloi</servlet-name>
+        <servlet-class>Mechlab.Servlets.MechSimuloi</servlet-class>
+    </servlet>
+
     <servlet-mapping>
         <servlet-name>Login</servlet-name>
         <url-pattern>/Login</url-pattern>
@@ -67,10 +54,6 @@
     <servlet-mapping>
         <servlet-name>Login</servlet-name>
         <url-pattern>/login</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>SelaaMech</servlet-name>
-        <url-pattern>/SelaaMech</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>MechSelaa</servlet-name>
@@ -111,6 +94,11 @@
     <servlet-mapping>
         <servlet-name>MechLuoUusi</servlet-name>
         <url-pattern>/mechluouusi</url-pattern>
+    </servlet-mapping>
+  
+    <servlet-mapping>
+        <servlet-name>mechsimuloi</servlet-name>
+        <url-pattern>/mechsimuloi</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
